--- a/passcounter.css
+++ b/passcounter.css
@@ -1,5 +1,5 @@
 body{
-      background-image: url(pexels-vlad-bagacian-1444108.jpg);
+      background-image: url("pexels-vlad-bagacian-1444108.jpg);
       background-repeat: no-repeat;
       background-size:cover;
       text-align: center;
